tests/blackbox_tests/desktop-entry-with-invalid-encoding-declaration.desktop
# E: desktop-entry-with-invalid-encoding-declaration ISO-8859-1

[Desktop Entry]
Type = Application
Name = Gizmo Enhancer
Encoding = ISO-8859-1
